--- a/popup-app/styles/popup.css
+++ b/popup-app/styles/popup.css
@@ -7,7 +7,7 @@ body {
 
 #sub-correction-button {
   background-color: white;
-  color: #8A2BE2;
+  color: #8a2be2;
   padding: 8px 16px;
   border: none;
   border-radius: 4px;
